Fix some Planner Triage View styling. Add "glass" behind the Triage popup, which grays out the rest of the page until the user closes the popup.

--- a/frontend/client/src/autotest/public/standard.css
+++ b/frontend/client/src/autotest/public/standard.css
@@ -10,6 +10,12 @@
   background: white;
 }
 
+.gwt-PopupPanelGlass {
+  background-color: #000;
+  opacity: 0.3;
+  filter: alpha(opacity=30);
+}
+
 /* MenuBar */
 
 .gwt-MenuBar {
